<resources>
    <string name="app_name">Simul</string>

    <string name="menu_home">Home</string>
    <string name="menu_amici">Amici</string>
    <string name="menu_profilo">Il tuo profilo</string>
    <string name="menu_impostazioni">Impostazioni</string>
    <string name="wip">Work in progress</string>
    <string name="menu_info">Guida e info</string>
    <string name="nome_utente">John Doe</string>
    <string name="email_utente">johndoe@gmail.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="text_id_stanza_number">00000000</string>
    <string name="text_destinazione">Destinazione scelta</string>
    <string name="text_velocita">0km/h</string>
    <string name="agree_terms_privacy"><a href="https://sites.google.com/stud.unive.it/simul/condizioni-duso?authuser=2">Accetta le condizioni di utilizzo</a></string>
</resources>