<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/home2">

    <fragment
        android:id="@+id/home2"
        android:name="sanchez.miguel.alfonso.simul.Home"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/amici"
        android:name="sanchez.miguel.alfonso.simul.Amici"
        android:label="@string/menu_amici"
        tools:layout="@layout/fragment_amici" />

    <fragment
        android:id="@+id/profilo"
        android:name="sanchez.miguel.alfonso.simul.Profilo"
        android:label="@string/menu_profilo"
        tools:layout="@layout/fragment_profilo" />

    <fragment
        android:id="@+id/impostazioni"
        android:name="sanchez.miguel.alfonso.simul.Impostazioni"
        android:label="@string/menu_impostazioni"
        tools:layout="@layout/fragment_impostazioni" />

    <fragment
        android:id="@+id/info2"
        android:name="sanchez.miguel.alfonso.simul.Info"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

</navigation>